--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,28 @@
 :root {
-    --primary: #007BFF; /* Azul */
-    --secondary: #28A745; /* Verde */
-    --light: rgb(70, 247, 70);
+    --primary: #6244C5;
+    --secondary: #FFC448;
+    --light: #FAFAFB;
     --dark: #12141D;
-}
-
-body {
-    margin: 0;
-    padding: 0;
 }
 
 .back-to-top {
     position: fixed;
     display: none;
-    right: 15px;
-    bottom: 15px;
+    right: 45px;
+    bottom: 45px;
     z-index: 99;
 }
 
 .my-6 {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
 }
 
 .py-6 {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
 }
+
 
 /*** Spinner ***/
 #spinner {
@@ -42,6 +38,7 @@ body {
     opacity: 1;
 }
 
+
 /*** Button ***/
 .btn {
     font-weight: 500;
@@ -50,21 +47,34 @@ body {
 
 .btn.btn-primary,
 .btn.btn-secondary {
-    color: #f5f5f5;
-    background-color: var(--primary);
+    color: #FFFFFF;
+}
+
+.btn-square {
+    width: 38px;
+    height: 38px;
+}
+
+.btn-sm-square {
+    width: 32px;
+    height: 32px;
+}
+
+.btn-lg-square {
+    width: 48px;
+    height: 48px;
 }
 
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
-    width: 38px;
-    height: 38px;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: normal;
 }
+
 
 /*** Navbar ***/
 .navbar.fixed-top {
@@ -86,72 +96,20 @@ body {
 }
 
 @media (max-width: 991.98px) {
-    .navbar .navbar-nav .nav-link {
-        padding: 10px 15px;
-    }
-
-    .navbar.fixed-top {
-        padding-top: 56px;
-    }
-
-    .navbar-toggler {
-        padding: .25rem .5rem;
-        font-size: 1.25rem;
-        line-height: 1;
-    }
-
-    .navbar-collapse {
-        max-height: none;
-    }
-
-    .navbar-nav {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .navbar-nav .nav-link {
+    .navbar .navbar-nav .nav-link  {
         padding: 10px 0;
     }
-
-    .navbar-toggler {
-        margin: .25rem 0;
-    }
-
-    .navbar-collapse.collapse {
-        display: none !important;
-    }
-
-    .navbar-toggler-icon {
-        display: block;
-        background-color: transparent;
-        background-image: none;
-        border: none;
-    }
-
-    .navbar-collapse.show {
-        display: flex !important;
-        flex-basis: 100%;
-        flex-grow: 1;
-    }
-
-    .navbar-brand {
-        margin-right: 0;
-    }
 }
+
 
 /*** Header ***/
 #home {
-    margin-bottom: 3rem;
-    background: url(../img/Leonardo_Diffusion_XL_Picture_an_image_that_represents_the_con_0.jpg) left top no-repeat;
-    background-color: rgb(106, 172, 243);
-    background-size: cover;
-    padding: 3rem;
-    width: 100%;
-    box-sizing: border-box;
+    margin-bottom: 6rem;
+    background: url(../img/bg-header.png) left top no-repeat;
 }
 
 .typed-cursor {
-    font-size: 20px;
+    font-size: 30px;
     color: var(--dark);
 }
 
@@ -247,16 +205,18 @@ body {
     opacity: 1;
 }
 
+
 /*** About ***/
 #about .years .display-1 {
-    font-size: 6rem;
-    line-height: 5rem;
+    font-size: 10rem;
+    line-height: 9rem;
 }
 
 #about .years h5 {
-    letter-spacing: 15px;
-    margin-right: -15px;
+    letter-spacing: 30px;
+    margin-right: -30px;
 }
+
 
 /*** Skills ***/
 #skill .progress {
@@ -282,6 +242,7 @@ body {
     width: 30px;
 }
 
+
 /*** Service ***/
 .service-item .bg-icon {
     width: 100px;
@@ -292,6 +253,7 @@ body {
     background: url(../img/bg-icon.png) center center no-repeat;
     background-size: cover;
 }
+
 
 /*** Project Portfolio ***/
 #portfolio-flters li {
@@ -334,6 +296,7 @@ body {
     padding-bottom: 30px !important;
 }
 
+
 /*** Team ***/
 .team-item img {
     transition: .5s;
@@ -346,8 +309,8 @@ body {
 .team-item .team-text {
     position: absolute;
     left: 0;
-    right: 30px;
-    bottom: 15px;
+    right: 60px;
+    bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -356,7 +319,7 @@ body {
 }
 
 .team-item:hover .team-text {
-    right: 15px;
+    right: 30px;
     opacity: 1;
 }
 
@@ -365,8 +328,9 @@ body {
 }
 
 .team-item:hover .team-text div {
-    margin-left: 15px;
+    margin-left: 30px;
 }
+
 
 /*** Testimonial ***/
 .testimonial-left,
@@ -462,63 +426,4 @@ body {
 
 .testimonial-carousel .owl-dot.active::after {
     background: var(--primary);
-}
-
-img.img-fluid {
-    background-color: transparent;
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-}
-
-div.row.g-5.align-items-center {
-    background-color: white;
-    padding: 20px;
-}
-
-/* Ajustes generales para pantallas más pequeñas */
-@media (max-width: 767.98px) {
-    #home {
-        padding: 1rem;
-    }
-
-    .btn-play {
-        padding: 12px 14px 14px 16px;
-    }
-
-    .navbar .navbar-nav .nav-link {
-        padding: 15px;
-    }
-
-    .navbar.fixed-top {
-        padding-top: 50px;
-    }
-
-    .team-item .team-text {
-        bottom: 10px;
-        right: 10px;
-    }
-
-    .testimonial-left img:nth-child(1),
-    .testimonial-right img:nth-child(3),
-    .testimonial-left img:nth-child(2),
-    .testimonial-right img:nth-child(2),
-    .testimonial-left img:nth-child(3),
-    .testimonial-right img:nth-child(1) {
-        width: 40px;
-        height: 40px;
-    }
-
-    .testimonial-carousel .owl-dot {
-        width: 20px;
-        height: 20px;
-    }
-
-    .testimonial-carousel .owl-dot::after {
-        width: 10px;
-        height: 10px;
-        top: 3px;
-        left: 3px;
-    }
 }
